Generating rental options + fixes + adjustments on tenant/unit-owner